simple rest server  has been implemented. FYI: https://github.com/typicode/json-server for CRUD operations with news

--- a/project/package.json
+++ b/project/package.json
@@ -4,7 +4,9 @@
   "description": "React workshop",
   "main": "index.js",
   "scripts": {
-    "webpackServer": "webpack-dev-server --hot"
+    "webpackServer": "webpack-dev-server --hot",
+    "mock:api": "json-server --watch api/db.json --port 4000",
+    "start": "npm run mock:api | npm run webpackServer"
   },
   "author": "",
   "license": "ISC",
