--- a/project/package.json
+++ b/project/package.json
@@ -20,6 +20,7 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "json-server": "^0.15.1",
     "react-hot-loader": "^4.12.15",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.1",
