--- a/project/package.json
+++ b/project/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "webpackServer": "webpack-dev-server --hot",
     "mock:api": "json-server --watch api/db.json --port 4000",
-    "start": "npm run mock:api | npm run webpackServer"
+    "start": "npm run mock:api | npm run webpackServer",
+    "test": "jest --config=jest.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,12 +18,21 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
+    "@babel/polyfill": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.6.3",
+    "@babel/register": "^7.7.0",
+    "@hot-loader/react-dom": "^16.11.0",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
     "json-server": "^0.15.1",
     "react-hot-loader": "^4.12.15",
+    "react-test-renderer": "^16.11.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.1",
     "webpack-cli": "^3.3.9",
