--- a/____result/package.json
+++ b/____result/package.json
@@ -12,12 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.2.1",
     "babel-eslint": "^10.0.3",
     "date-fns": "^2.9.0",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
+    "react-debounce-input": "^3.2.2",
     "react-dom": "^16.10.2",
+    "react-redux": "^7.1.3",
+    "react-select": "^3.0.8",
+    "redux": "^4.0.5",
     "sass-loader": "^8.0.1"
   },
   "devDependencies": {
