--- a/____result/package.json
+++ b/____result/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.9.0",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
+    "query-string": "^6.9.0",
     "react": "^16.10.2",
     "react-debounce-input": "^3.2.2",
     "react-dom": "^16.10.2",
