--- a/project/package.json
+++ b/project/package.json
@@ -12,10 +12,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.2.1",
+    "babel-eslint": "^10.0.3",
     "date-fns": "^2.9.0",
+    "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
+    "query-string": "^6.9.0",
     "react": "^16.10.2",
-    "react-dom": "^16.10.2"
+    "react-debounce-input": "^3.2.2",
+    "react-dom": "^16.10.2",
+    "react-redux": "^7.1.3",
+    "react-select": "^3.0.8",
+    "redux": "^4.0.5",
+    "sass-loader": "^8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
@@ -29,13 +38,20 @@
     "css-loader": "^3.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-import-resolver-webpack": "0.12.0",
+    "eslint-plugin-import": "2.19.1",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.17.0",
+    "eslint-plugin-react-hooks": "2.3.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "json-server": "^0.15.1",
     "react-hot-loader": "^4.12.15",
     "react-test-renderer": "^16.11.0",
     "style-loader": "^1.0.0",
-    "webpack": "^4.41.1",
+    "webpack": "^4.41.5",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2"
   }
